--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
 
 	 #wardrobeModal {
       position: absolute;
-      top: 10%;
+      top: 30vh;
       left: 50%;
       transform: translateX(-50%);
       width: 90vw;
