--- a/index.html
+++ b/index.html
@@ -6584,7 +6584,8 @@ function triggerT80Cannon() {
       { src: "images/zombie_search_sprite_btr.png", unlock: "報話機" },
       { src: "images/zombie_search_sprite_equipped.png", unlock: "武裝通信兵" },
       { src: "images/zombie_search_sprite_svd.png", unlock: "拾荒高手" },
-      { src: "images/zombie_search_sprite_svd_h.png", unlock: "物資收集者" },
+      { src: "images/zombie_search_sprite_svd_b.png", unlock: "清空貨架！" },
+	  { src: "images/zombie_search_sprite_svd_h.png", unlock: "物資收集者" },
       { src: "images/zombie_search_sprite_elite.png", unlock: "全副武裝" },
       { src: "images/zombie_search_sprite_pkm_e.png", unlock: "裝甲猛虎" },
       { src: "images/zombie_search_sprite_pkm_m.png", unlock: "銅墻鐵壁" }
