--- a/index.html
+++ b/index.html
@@ -6572,16 +6572,18 @@ function triggerT80Cannon() {
 	  { src: "images/zombie_search_sprite_svd_h.png", unlock: "物資收集者" },
       { src: "images/zombie_search_sprite_elite.png", unlock: "全副武裝" },
       { src: "images/zombie_search_sprite_pkm_e.png", unlock: "裝甲猛虎" },
-      { src: "images/zombie_search_sprite_pkm_m.png", unlock: "銅墻鐵壁" }
+      { src: "images/zombie_search_sprite_pkm_m.png", unlock: "銅墻鐵壁" },
+	  { src: "images/zombie_search_sprite_pkm_ms.png", unlock: "堅不可摧" },
     ];
     const btrSpriteOptions = [
-      { src: "images/btr_sprite.png", unlock: true }
-      // 若有其他BTR選項，可在此添加……
+      { src: "images/btr_sprite_80.png", unlock: true },
+	  { src: "images/btr_sprite_80_a.png", unlock: "尸坦協同" },
+      { src: "images/btr_sprite_80_mg.png", unlock: "機炮仙人" },
     ];
     const t80SpriteOptions = [
       { src: "images/t-80_sprite.png", unlock: true },
       { src: "images/t-80_sprite_u.png", unlock: "裝甲猛虎" },
-	  { src: "images/t-80_sprite_um.png", unlock: "裝甲大軍" }
+	  { src: "images/t-80_sprite_um.png", unlock: "裝甲大軍" },
     ];
     
     // ──────────────────────────────
